Fixing white space problem while using sidebar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,8 +6,12 @@
     position: fixed;
     z-index: 1;
 }
+html {
+    height: 100%;
+}
 
 body {
+    min-height: 100%;
     background-color: #f2f2f2;
     font-family: "Quicksand", sans-serif;
 }
